chore(app): use new logo

--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -101,7 +101,7 @@
     <file>assets/images/led_orange.svg</file>
     <file>assets/images/led_red.svg</file>
     <file>assets/images/led_white.svg</file>
-    <file>assets/images/linphone.png</file>
+    <file>assets/images/linphone_logo.svg</file>
     <file>assets/images/message_sign.svg</file>
     <file>assets/images/micro_off_hovered.svg</file>
     <file>assets/images/micro_off_normal.svg</file>
