--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -184,6 +184,9 @@
     <file>ui/modules/Common/Form/ListForm.qml</file>
     <file>ui/modules/Common/Form/Placements/FormEntry.qml</file>
     <file>ui/modules/Common/Form/Placements/FormGroup.qml</file>
+    <file>ui/modules/Common/Form/Placements/FormHeaderEntry.qml</file>
+    <file>ui/modules/Common/Form/Placements/FormHeaderGroup.qml</file>
+    <file>ui/modules/Common/Form/Placements/FormHeader.qml</file>
     <file>ui/modules/Common/Form/Placements/FormLine.qml</file>
     <file>ui/modules/Common/Form/Placements/Form.qml</file>
     <file>ui/modules/Common/Form/SmallButton.qml</file>
@@ -224,6 +227,8 @@
     <file>ui/modules/Common/Styles/Form/Fields/TextFieldStyle.qml</file>
     <file>ui/modules/Common/Styles/Form/ListFormStyle.qml</file>
     <file>ui/modules/Common/Styles/Form/Placements/FormGroupStyle.qml</file>
+    <file>ui/modules/Common/Styles/Form/Placements/FormHeaderGroupStyle.qml</file>
+    <file>ui/modules/Common/Styles/Form/Placements/FormHeaderStyle.qml</file>
     <file>ui/modules/Common/Styles/Form/Placements/FormLineStyle.qml</file>
     <file>ui/modules/Common/Styles/Form/Placements/FormStyle.qml</file>
     <file>ui/modules/Common/Styles/Form/SmallButtonStyle.qml</file>
