--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -337,6 +337,7 @@
     <file>ui/views/App/Styles/Main/HomeStyle.qml</file>
     <file>ui/views/App/Styles/Main/MainWindowMenuBarStyle.qml</file>
     <file>ui/views/App/Styles/Main/MainWindowStyle.qml</file>
+    <file>ui/views/App/Styles/ManageAccountsStyle.qml</file>
     <file>ui/views/App/Styles/qmldir</file>
     <file>ui/views/App/Styles/Settings/SettingsWindowStyle.qml</file>
   </qresource>
