feat(ui/views/App/Settings/SettingsNetwork): supports DSCP fields

--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -186,6 +186,7 @@
     <file>ui/modules/Common/Form/CheckBoxText.qml</file>
     <file>ui/modules/Common/Form/ComboBox.qml</file>
     <file>ui/modules/Common/Form/DroppableTextArea.qml</file>
+    <file>ui/modules/Common/Form/Fields/HexField.qml</file>
     <file>ui/modules/Common/Form/Fields/NumericField.qml</file>
     <file>ui/modules/Common/Form/Fields/PortField.qml</file>
     <file>ui/modules/Common/Form/Fields/TextAreaField.qml</file>
