feat(ui/modules/Linphone/Chat/Message): use a `Logic` file

--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -271,6 +271,7 @@
     <file>ui/modules/Linphone/Chat/Event.qml</file>
     <file>ui/modules/Linphone/Chat/FileMessage.qml</file>
     <file>ui/modules/Linphone/Chat/IncomingMessage.qml</file>
+    <file>ui/modules/Linphone/Chat/Message.js</file>
     <file>ui/modules/Linphone/Chat/Message.qml</file>
     <file>ui/modules/Linphone/Chat/OutgoingMessage.qml</file>
     <file>ui/modules/Linphone/Contact/Avatar.qml</file>
