--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -313,6 +313,7 @@
     <file>ui/scripts/Utils/utils.js</file>
     <file>ui/views/App/Calls/AbstractStartingCall.qml</file>
     <file>ui/views/App/Calls/CallsWindow.qml</file>
+    <file>ui/views/App/Calls/Incall.js</file>
     <file>ui/views/App/Calls/Incall.qml</file>
     <file>ui/views/App/Calls/IncomingCall.qml</file>
     <file>ui/views/App/Calls/OutgoingCall.qml</file>
