--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -311,6 +311,7 @@
     <file>ui/scripts/Utils/uri-tools.js</file>
     <file>ui/scripts/Utils/utils.js</file>
     <file>ui/views/App/Calls/AbstractStartingCall.qml</file>
+    <file>ui/views/App/Calls/CallsWindow.js</file>
     <file>ui/views/App/Calls/CallsWindow.qml</file>
     <file>ui/views/App/Calls/IncallFullscreenWindow.qml</file>
     <file>ui/views/App/Calls/Incall.js</file>
