--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -148,6 +148,7 @@
     <file>assets/images/speaker_on_hovered.svg</file>
     <file>assets/images/speaker_on_normal.svg</file>
     <file>assets/images/speaker_on_pressed.svg</file>
+    <file>assets/images/splash_screen.svg</file>
     <file>assets/images/tooltip_arrow_bottom.svg</file>
     <file>assets/images/tooltip_arrow_left.svg</file>
     <file>assets/images/tooltip_arrow_right.svg</file>
@@ -343,6 +344,7 @@
     <file>ui/views/App/Settings/SettingsUi.qml</file>
     <file>ui/views/App/Settings/SettingsVideo.qml</file>
     <file>ui/views/App/Settings/SettingsWindow.qml</file>
+    <file>ui/views/App/SplashScreen/SplashScreen.qml</file>
     <file>ui/views/App/Styles/Calls/CallStyle.qml</file>
     <file>ui/views/App/Styles/Calls/CallsWindowStyle.qml</file>
     <file>ui/views/App/Styles/Main/Assistant/AssistantAbstractViewStyle.qml</file>
@@ -360,5 +362,6 @@
     <file>ui/views/App/Styles/Main/ManageAccountsStyle.qml</file>
     <file>ui/views/App/Styles/qmldir</file>
     <file>ui/views/App/Styles/Settings/SettingsWindowStyle.qml</file>
+    <file>ui/views/App/Styles/SplashScreen/SplashScreenStyle.qml</file>
   </qresource>
 </RCC>
