--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -340,6 +340,8 @@
     <file>ui/views/App/Settings/SettingsAudio.qml</file>
     <file>ui/views/App/Settings/SettingsCallsChat.qml</file>
     <file>ui/views/App/Settings/SettingsNetwork.qml</file>
+    <file>ui/views/App/Settings/SettingsSipAccountsEdit.qml</file>
+    <file>ui/views/App/Settings/SettingsSipAccounts.js</file>
     <file>ui/views/App/Settings/SettingsSipAccounts.qml</file>
     <file>ui/views/App/Settings/SettingsUi.qml</file>
     <file>ui/views/App/Settings/SettingsVideo.qml</file>
