--- a/linphone-desktop/resources.qrc
+++ b/linphone-desktop/resources.qrc
@@ -1,5 +1,13 @@
 <!DOCTYPE RCC><RCC version="1.0">
   <qresource prefix="/">
+    <file>assets/fonts/NotoSans-hinted/NotoSans-BoldItalic.ttf</file>
+    <file>assets/fonts/NotoSans-hinted/NotoSans-Bold.ttf</file>
+    <file>assets/fonts/NotoSans-hinted/NotoSans-Italic.ttf</file>
+    <file>assets/fonts/NotoSans-hinted/NotoSans-Regular.ttf</file>
+    <file>assets/fonts/NotoSans-hinted/NotoSansUI-BoldItalic.ttf</file>
+    <file>assets/fonts/NotoSans-hinted/NotoSansUI-Bold.ttf</file>
+    <file>assets/fonts/NotoSans-hinted/NotoSansUI-Italic.ttf</file>
+    <file>assets/fonts/NotoSans-hinted/NotoSansUI-Regular.ttf</file>
     <file>assets/images/add_disabled.svg</file>
     <file>assets/images/add_hovered.svg</file>
     <file>assets/images/add_normal.svg</file>
